<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imgVehiculo"
        android:layout_width="match_parent"
        android:layout_height="308dp"></ImageView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Información del vehiculo"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_placa"
                    android:drawableLeft="@drawable/ic_dui"
                    android:enabled="false"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_check"
                    android:hint="@string/label_modelo"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_format_color_fill_black_24dp"
                    android:hint="@string/label_color"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edtAnio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:hint="@string/label_anio"
                    android:enabled="false"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>







        </LinearLayout>
    </ScrollView>



</LinearLayout>