<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Información del cliente"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_cliente"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:enabled="false"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:enabled="false"
                    android:hint="@string/label_correo"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_dui"
                    android:enabled="false"
                    android:hint="@string/label_plan"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="Telefono"
                    android:enabled="false"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edtActivacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:hint="@string/label_activacion"
                    android:enabled="false"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:layout_marginBottom="14dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edtVencimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:hint="@string/label_vencimiento"
                    android:enabled="false"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>