<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actualizar_detalle_reserva">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNumOrden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Detalle reserva"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person"
                        android:editable="false"
                        android:hint="@string/label_cliente"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPlan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_document"
                        android:editable="false"
                        android:hint="@string/label_contrato"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:editable="false"
                        android:hint="Fecha"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:editable="false"
                        android:hint="Hora"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/dasdasd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="16dp"
                    android:drawableLeft="@drawable/ic_menu"
                    android:text="@string/label_estado"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spnEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp" />


                <TextView
                    android:id="@+id/tvEstadoReserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    >
                </TextView>


                <LinearLayout
                        android:id="@+id/containerSupervisor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                    >


                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:text="@string/label_supervisor"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spnSupervisor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="14dp" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/containerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnActualizar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="125dp"
                        android:background="@drawable/ic_btn_launcher"
                        android:text="Aceptar y crear orden"
                        android:textColor="@color/design_default_color_background" />


                </LinearLayout>





            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>